--- a/index.html
+++ b/index.html
@@ -23,12 +23,17 @@
     body {
       padding: 0;
       margin: 0;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
   </style>
 </head>
 
 <body>
-  <body oncopy="return false" oncut="return false" onpaste="return false"></body>
 </body>
 
 </html>
